# Crypto-Trading-Agent

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy.yml
adk_agents/desk/: agent.py
audit/: risk_state.json
docs/: DEMO_SCRIPT.md
scripts/: demo.sh  voiceover.sh
src/trading_agent/: __init__.py  cli.py  config.py
src/trading_agent/agents/: __init__.py  coordinator.py  execution_trader.py  market_analyst.py  risk_manager.py  toolsets.py
src/trading_agent/binance_mcp/: __init__.py  client.py  server.py
src/trading_agent/security/: __init__.py  audit.py  risk_guard.py
tests/: test_audit.py  test_risk_guard.py
